# portfolio-server

./: .flake8  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt  secrets.json  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/accounts/: admin.py  apps.py  forms.py  login.html  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/templatetags/: gravatar.py
apps/comment/: apps.py  models.py  serializers.py  views.py
apps/comment/migrations/: 0001_initial.py  0002_alter_comment_author.py  0002_initial.py  0003_remove_comment_post_comment_project.py
apps/core/: admin.py  managers.py  models.py  serializers.py  urls.py  utility.py  views.py
apps/core/migrations/: 0001_initial.py
apps/portfolio/: admin.py  apps.py  models.py
apps/portfolio/migrations/: 0001_initial.py
apps/post/: admin.py  models.py  pagination.py  serializers.py  urls.py  views.py
apps/post/migrations/: 0001_initial.py  0002_alter_post_options_remove_post_likes_post_liker_and_more.py  0002_initial.py  0003_rename_email_post_author.py
apps/project/: models.py  serializers.py  urls.py  views.py
apps/project/migrations/: 0001_initial.py  0002_initial.py  0002_project_liker_alter_project_user.py  0003_project_tech_stack.py  (+7 more)
apps/skill/: admin.py  apps.py  models.py
apps/tag/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/user/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
apps/users/: models.py
config/: settings.py  urls.py  wsgi.py
config/settings/: base.py  local.py
docs/: installation.md
fixtures/: README.md  skill.position.json  skill.skill.json
utility/: tag_scrapper.py
(+15 files in other folders)
