[tool.poetry]
name = "portfolio-server"
version = "0.0.1"
description = "portfolio backend"
authors = [
    "Yeonggwang <immutable000@gmail.com>", 
    "Hyemin <hmkim199@naver.com>", 
    "Byungsu <castela0119@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^21.12b0"

# 선택적으로 설치
[tool.poetry.extras]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# isort 설정
[tool.isort]
line_length = 88 
skip_glob = "**/migrations/*.py"
include_trailing_comma = true
use_parentheses = true

# black 설정
[tool.black]
line-length = 88
include = '\.pyi?$' 
extend-exclude = '''
     migrations
'''